--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,40 @@
-/node_modules
+# Dependencies
+node_modules/
+
+# Environment variables
+.env
+.env.local
+.env.*.local
+
+# Debug logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# IDE and editor files
+.idea/
+.vscode/
+*.swp
+*.swo
+
+# OS generated files
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+# Build output
+dist/
+build/
+.next/
+out/
+
+# Coverage directory
+coverage/
+
+# Temporary files
+*.log
+*.tmp
