--- a/.gitignore
+++ b/.gitignore
@@ -38,3 +38,19 @@ coverage/
 # Temporary files
 *.log
 *.tmp
+
+# Terraform files
+**/.terraform/*
+*.tfstate
+*.tfstate.*
+crash.log
+crash.*.log
+*.tfvars
+*.tfvars.json
+override.tf
+override.tf.json
+*_override.tf
+*_override.tf.json
+.terraformrc
+terraform.rc
+.terraform.lock.hcl
