--- a/.github/workflows/action-terraform-verify.yml
+++ b/.github/workflows/action-terraform-verify.yml
@@ -13,8 +13,6 @@ jobs:
   validate:
     runs-on: ubuntu-latest
     name: terraform fmt check
-    outputs:
-      CHECK_STATUS: "${{ env.CHECK_STATUS }}"
     steps:
       - uses: actions/checkout@v3
         with:
@@ -28,25 +26,16 @@ jobs:
         uses: hashicorp/setup-terraform@v2
         with:
           terraform_version: 1.2.4
-      - name: Validate terraform fmt (added_modified)
+      - name: Validate terraform fmt
         run: |
-          set +e
-
-          echo "CHECK_STATUS=0" >> $GITHUB_ENV
-
+          EXIT_CODE=0
           for changed_file in ${{ steps.pr_files.outputs.added_modified }}; do
-            echo "Checking terraform fmt on ${changed_file}..."
-
             if [[ $changed_file == *.tf ]]; then
-              terraform fmt -check $changed_file
-              FMT_STATUS=$(echo $?)
-
-              if [[ $FMT_STATUS -ne 0 ]]; then
-                echo "❌ terraform fmt failed - ${changed_file}" >> $GITHUB_STEP_SUMMARY
-                echo "CHECK_STATUS=1" >> $GITHUB_ENV
+              echo "Checking terraform fmt on ${changed_file}..."
+              if ! terraform fmt -check "$changed_file"; then
+                echo "::error::❌ Terraform formatting failed for ${changed_file}"
+                EXIT_CODE=1
               fi
             fi
           done
-      - name: Process check
-        if: always()
-        run: exit $CHECK_STATUS
+          exit $EXIT_CODE
